upadte after SFI submittion

--- a/doc/administrative_doc/2018SFpostdoc/research_project.tex
+++ b/doc/administrative_doc/2018SFpostdoc/research_project.tex
@@ -1,53 +1,83 @@
 \documentclass[10pt]{article}   
+\usepackage{hyperref}
+\usepackage{color}
 \usepackage{fontspec} 
-
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
 \setmainfont{ebgaramond}
+
 
 \usepackage[scale=0.75]{geometry}
 
-\author{Simon Carrignon}
-\title{Research Statement Interest}
-\date{October 2018}
+\definecolor{grey}{gray}{0.6}
+\title{\textcolor{grey}{\Large Research Interest and Projects}\\
+\vspace{-.25cm}
+{ \normalsize Simon Carrignon (October 2018)}}
+\author{}
+\date{}
 
 
 
 
+%\color{grey}
 \begin{document}
 \maketitle
 
+\vspace{-.5cm}
 
-Throughout my studies, from my very beginning at the university to my actual PhD, I always managed to follow an interdisciplinary path, mixing computer sciences with evolutionary biology, cognitive sciences, philosophy of science, history, economic and archeology.
+Throughout my studies, from my very beginning at the university to my actual PhD, I always managed to follow an interdisciplinary path, mixing computer sciences with evolutionary biology, cognitive sciences, philosophy of science, history and archaeology. This interest in multi-disciplinarity started long before entering the University. Young I witnessed the arrival of personal desktop in most families, and as soon as we got one in mine, I started to be amazed by the ability of numeric artifacts (screensavers, games, internet,\ldots) to exhibit ‘life-like’ and ‘human-like’ behaviors. 
+It was as if, by finding the right combination of instructions, it was possible to recreate, within the small square of the screen, the complexity of a wide variety of things that surround us, from livings beings to social phenomena.
 
-This interest in multi-disciplinary started long before entering the university. Young I witnessed the arrival of personal desktop in household, and as soon as we got one in my family, I started to be amazed by the ability of numeric artifacts (screensavers, games, internet,\ldots) to exhibit ‘life-like’ and ‘human-like’ behaviors. 
-It was as if, by finding the right combination of order, it was possible to recreate, within the small square of the screen, the complexity of a wide variety of the things that surround us. 
+I quickly became determined that I wanted to find this right combination of instructions, and to do so, to understand the actual rules of those living things that surround us, as well as how to program their artificial counterparts.  Since then, all the courses I chose, the schools I went, the master and internships I did were going in that direction. This led me to study Biology, Computer Science, as well as Cognitives sciences, History and Philosophy of Science and finally to do a PhD applying Cultural Evolution to study large scale social and economic changes. Meanwhile I worked  in various laboratories, on fields as various as Philogenetic, Neuroscience, Psychology, Evolutionary Robotics or Philosophy of Sciences. The more I learnt, the more the importance of Evolutionary Theory became evident. And the end, my genuine inquiry evolved into more concrete questions: 
+\begin{itemize}
+    \item How various systems made of simple interacting elements, can, based on few rules and without supervision, diversify, adapt and change themselves as well as their environment?
+    \item What are the links between human production (languages, technologies, social organization, computer abstractions) and natural systems? 
+    \item Is the fact that artificial tools can be used to understand the complexity of natural systems only the result of a coincidence or does it reflect something more profound on the nature of both things?
+\end{itemize}
+If those questions are abstract, ambitious and to answer them is probably unrealistic, they are the underlying ones that drives my interest and day to day research. And this is what I tried to answer during the past 8 years, and which can be ultimately  summarized as: \emph{the exploration of how systems made up of huge number of entities (homogeneous or not), highly decentralized and mostly unsupervised, can evolve powerful adaptive properties (such as division of labor, cooperation, specialization,\ldots).}
 
-And I quickly became determined to learning how to find this right combination of orders. And to do so, I knew I will have to understandthe actual rule of living thins and how to program their artificial counterparts. Since then all the courses I chose, all the schools I decided to attended, and all other choices I made were in pursuit of obtaining a better understanding of it.
-
-This genuine inquiry quickly evolved into more concrete question: what are the links between human production (languages, technologies, social organization, computer abstractions) and natural systems driven by Darwinian evolution. How such systems can, based on simple rule and without supervision, diversify, adapt and change their environment as well as they change themselves? 
-Does the fact that we can use artificial tools to understand the complexity of natural systems is the result of pure coincidence or does it reflect a more profund complex system.  If those questions are abstract, ambitious and probably unrealistic, they are the underlying quest that still drives my interest and day to day research.
-
-This led me to study Biology, Computer Science, as well as Cognitives sciences, and finally History and Philosophy of Science. I worked in various laboratory as an undergraduated student, on fields as various as philogenetic, neuroscience, psychology or Evolutionnar Robotics. The more  learnt, the more I learnt, the more the importance of Evolutionary Theory become evident. A first work on the theoretical eexploration of led to a paper \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments} on the evolution of copperation,
-
-They led me to a Master Degree in Natural \& Artificial Cognition, in which I worked on the evolution of division of labor in swarm of autonomous agents. The main idea was to explore what are the properties of the reproductive network that permit the emergence such division of labor. Those work are still ongoing and will soon be published. In parallel I studied the same kind of mechanisms but in simulated ‘cognitive’ agents designed with psychologists. The idea here was to explore  what kind of environmental conditions allow subpopulation of cooperative agents to co-exist with populations of selfish individual. This work has been published few months ago \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}.
-
-
-In both case the results I found were valuable as themselves for me and provided a new understanding about crucial evolutionary processes in totally different contexts. But to convince people that this knowledge could be applied to real world entities and that it was valuable for the understanding of the world in general was not as straightforward. I realize that if I wanted myself to be able to produce meaningful, useful and concrete research projects and moreover if I wanted to be able to make the link between such projects and what more ‘traditional’ scientists were doing, I would need a deep understanding of the tool I use, the subject I study and the link between them. 
-
-That decided me to engage myself in another Master Degree in History and Philosophy of Science. My work then focused on exploring what is the nature of evolutionary processes and how we can study them using computers. It allowed me to learn precisely the history and the construction of Evolutionary Biology since Darwin and to dig deeper in the philosophical debates that occurred throughout this history. I took also this opportunity to diversify the nature of the systems I wanted to study: I created the LaReMI Junior lab (http://en.laremi.net/), financially supported by the Ecole Normal Superieur (Lyon France) with the idea of applying similar approach (simulation coupled with simple cognitive experiments) to study the evolution of music melodies. It was my first contact with what is called ‘cultural evolution’, but moreover it allowed us to organize an international workshop on the topic in Lyon (http://en.laremi.net/actvity/meeting\footnote{Regarding to the auto-hosting solution we adopt for our server, the loading of those pages could take time}) and to present our approach to the community in Lisbon \cite{carrignon2013whyapply}.
-
-After those two complementary Masters, I pursued the exploration of such questions in the scope of my PhD. The idea here is still to use simulation to try to understand the conditions of evolution of particular dynamics in a decentralized system. This time I choose to study the evolution of cultural and economic network during the Roman Empire. An historical question about a human activity in a project \footnote{ERC grant EPNET: www.roman-ep.net} involving historians, archaeologists as well as database specialists. My work focus on trying to understand the conditions of the emergence of a decentralized market. The main goal is to provide tools to measure if such conditions were satisfied during the Roman period and if not, what kind of economy we should expect to find. To do so I developed a simple cultural evolution simulation where cultural transmission mechanisms lead to economical changes, that in turn modify the cultural dynamics. Right now I am exploring what kind of properties the cultural network need to exhibit in order that a stable decentralized economy evolved and I already presented the computational framework at the Winter Simulation Conference \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties} and I will present the first results we obtains with the networks in Oslo.
-
-Those past 4 years and my actual research project can be summarized as the exploration of how systems made up of huge number of entities (homogeneous or not), highly decentralized and mostly unsupervised, can evolved powerful adaptive properties such as division of labor, cooperation, specialization and learning whatever the nature of such entities. Thanks to my master in Philosophy of Science I also developed a deep concern about the epistemological relevance of what I am doing. Computer Simulation and Complex Systems Analysis are powerful tools but they could quickly mislead the research and bring the researcher to nonsense and useless explorations. Moreover, the questions raised by such approach quickly go behind the simple empiric inquisition and require skills that allow to rethink and redefine the traditional epistemic baggage into framework far from the ones scientists are use to work in.
+Using computer model I simulated and analysed those systems. This led to various publications of different models used to study: cooperation \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}, division of labor and specialisation\cite{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult,bredeche2017benefitsofproportionateselectioninembodiedevolutionacasestudywithbehaviouralspecialization}, trade in past society \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties}, evolution of lichens \cite{carrignon2016lichen} or even purely theoretical evolutionary dynamics \cite{medernach2015evolutionary,medernach2016evolution}.
 
 
-In every projects I worked I saw how mature such approach is getting. Trying to understand decentralized and unsupervised evolving system \emph{per se} is providing knowledge in a wide range of different area. It is not anymore a marginal object of distraction for curious scientist. With new generation of physicists, biologists, sociologists, economists and even historians who learn such methods, concrete hypotheses are formulated and can be tested. With computer and program always more powerful, and with scientist like me with a strong transdisciplinary background, a high expertise and able to make the link between the questions, the methods and the results, new discovery can be made about topic that were even unthinkable before. 
+But those studies remained mainly theoretical. Making the link between them and the real system was a big source of reflection for me.  How to do it? How to justify it? Does it even have a sense to do it? This is why I did a  master in History and Philosophy of Science, where I wrote a thesis on ``Evolutionary Robotics as a model to study Biology of Evolution''. Since then, I try to keep my work as tightly linked to data as possible. As I learnt during my PhD this don't add a layer of complexity. In fact, it often simplifies the modeling and analysis activity. The main difficulty to keep model linked with reality, is to deeply understand the system of study and to work closely with the specialists. This is the only way to formulate meaningful hypotheses that make sens both as research questions within the field studied and as system that can be modelled and tested using computers. But following that, the modeling \emph{per se} becomes easier, and the analysis more straightforward. 
 
-This gives us a wide open area of research where a lot remains to do.  I will continue to explore it. Among other things, I will continue to explore the networks' properties that allow systems to evolve properties such as cooperation, division of labor, specialization\ldots but I want to understand how such networks can evolve. Another huge track of research I want to pursue is to study in what extend the evolution of those properties depend on the abilities of the system to interact with its environment (using developmental mechanism, simple learning, cultural transmission,\ldots). 
+This is what I did during my PhD. As I started working with historical and archaeological dataset and theories, the link between models and data became more and more important. As there is no strong theories nor consensus to guide what can be modeled and how, keeping this link is the only way to built meaningful models. The data (archaeological or historical) is the only thing against which models can be tested. Even if this data is biased, sparse and noisy. This is the only thing that we have. 
 
-In any case my main concern is to tighten the link between what I am doing, the empirical data and the scientists working to try to extract meanings from those data. To do so I will continue to work with people from different field but with concrete, real and complex case study. Because I think that the most valuable and beautiful striking knowledge don't lie in computational simulation we can do or in the mathematical model we extract from it, neither in the simple analysis of the raw data and the description of such analysis, but emerge from the well articulation of both side.
+To achieve this I started using Bayesian Inference. More precisely: Approximate Bayesian Computation. It allows to use any kind of models and compute their likelihood to be true given an \emph{a priori} knowledge and a dataset. Evolutionary Biologists have shown how to use it to compare and select different competing scenarios to explain the actual distribution of genes \cite{beaumont2009adaptiveapproximatebayesiancomputation}, and it has been recently demonstrate how they are extremely valuable to explain socio-cultural history of human civilisations \cite{rubiocampillo2016modelselectioninhistoricalresearchusingapproximatebayesiancomputation,kandler2017inferringindividuallevelprocessesfrompopulationlevelpatternsinculturalevolution}.
+
+Using that method, and thanks to highly qualified Archaeologist and Historian and supercomputing architecture,  I was finally able to loop through the full circle of knowledge production, in a way that looked much similar to what traditional experimental science is doing: from the proposal and formulation of hypotheses, to the preparation of an experimental setup to test, compare and reject and them with regard to known evidences. Most of the recent work I did, and my full PhD go in that direction. Most is still to be published but have been subject of various talks and posters \cite{coto2016exploringamphorabetica,carrignon2018abmtrac,romanowska2018jerash,carrignon2017impactofdifferentsociallearningmechanismsontheemergenceofawalrasianequilibrium,carrignon2018hpcmodel,carrignon2018}. 
+
+I have now a fully functional framework based on computer models as powerful tools to explore various range of phenomena that cannot be tested through experimental or analytical exploration, with evolutionary theories as a reference within which implement and interpret those models, and Bayesian Inference to statistically test, compare and select them given known datasets and evidences.
+
+If evolutionary biology is already successfully using this framework, much more has to be done in Humanities and Social Sciences. The potential of applications is huge and I don't see a better place than the Santa Fe Institute to explore it. Among the different track I want to follow, one was started during the 2016 Complex System Summer School of the SFI where we digitalised and analysed a new dataset on the industrialization of Europe before the World War I. We presented the first results here \cite{carrignon2016patternsinglobalization}, and we hope to successfully use the framework I described to show how globalization was one of the drivers of industrialization of Europe and how it ultimately led to war. I also hope to be able to link this with another industrialisation I studied during my PhD: the Roman Empire. My colleague Maria Coto-Sarmiento has data on the standardisation and globalisation of exchange\cite{COTOSARMIENTO2018117} that still wait to be more analysed using those tools. In parallel, I am working with John Hanson on model of urbanisation that we hope to couple with the data he have on the scaling properties of cities in the Roman Empire \cite{Hanson20170367}. A comparative study under a general framework between Roman and Modern industrialisation would shed new light and bring more quantitatively and data driven arguments on endless debates.
+
+Finally, a path I recently started and on which I want to focus during the coming years is the study of actual social phenomena.  One example is the spread of news online \cite{carrignon2018}. Is started this work with Alex Bentley a few month ago, but the first results we have look promising. The data available for modern social dynamics are much more complete than the archaeological historical records.  I want to go ahead and apply my methods to better understand modern social dynamics. The rise and spread of fake news as well as the polarization of opinion  are topic that need to be understand as soon as possible.  And this is what I aim to do, the same way I try to understand the rise and spread of past cultures and the split and division of empires. 
+
+%A first work on the theoretical eexploration of led to a paper \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments} on the evolution of cooperation,
+%
+%They led me to a Master Degree in Natural \& Artificial Cognition, in which I worked on the evolution of division of labor in swarm of autonomous agents. The main idea was to explore what are the properties of the reproductive network that permit the emergence such division of labor. Those work are still ongoing and will soon be published. In parallel I studied the same kind of mechanisms but in simulated ‘cognitive’ agents designed with psychologists. The idea here was to explore  what kind of environmental conditions allow subpopulation of cooperative agents to co-exist with populations of selfish individual. This work has been published few months ago \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}.
+%
+%
+%In both case the results I found were valuable as themselves for me and provided a new understanding about crucial evolutionary processes in totally different contexts. But to convince people that this knowledge could be applied to real world entities and that it was valuable for the understanding of the world in general was not as straightforward. I realize that if I wanted myself to be able to produce meaningful, useful and concrete research projects and moreover if I wanted to be able to make the link between such projects and what more ‘traditional’ scientists were doing, I would need a deep understanding of the tool I use, the subject I study and the link between them. 
+%s
+%That decided me to engage myself in another Master Degree in History and Philosophy of Science. My work then focused on exploring what is the nature of evolutionary processes and how we can study them using computers. It allowed me to learn precisely the history and the construction of Evolutionary Biology since Darwin and to dig deeper in the philosophical debates that occurred throughout this history. I took also this opportunity to diversify the nature of the systems I wanted to study: I created the LaReMI Junior lab (http://en.laremi.net/), financially supported by the Ecole Normal Superieur (Lyon France) with the idea of applying similar approach (simulation coupled with simple cognitive experiments) to study the evolution of music melodies. It was my first contact with what is called ‘cultural evolution’, but moreover it allowed us to organize an international workshop on the topic in Lyon (http://en.laremi.net/actvity/meeting\footnote{Regarding to the auto-hosting solution we adopt for our server, the loading of those pages could take time}) and to present our approach to the community in Lisbon \cite{carrignon2013whyapply}.
+%
+%After those two complementary Masters, I pursued the exploration of such questions in the scope of my PhD. The idea here is still to use simulation to try to understand the conditions of evolution of particular dynamics in a decentralized system. This time I choose to study the evolution of cultural and economic network during the Roman Empire. An historical question about a human activity in a project \footnote{ERC grant EPNET: www.roman-ep.net} involving historians, archaeologists as well as database specialists. My work focus on trying to understand the conditions of the emergence of a decentralized market. The main goal is to provide tools to measure if such conditions were satisfied during the Roman period and if not, what kind of economy we should expect to find. To do so I developed a simple cultural evolution simulation where cultural transmission mechanisms lead to economical changes, that in turn modify the cultural dynamics. Right now I am exploring what kind of properties the cultural network need to exhibit in order that a stable decentralized economy evolved and I already presented the computational framework at the Winter Simulation Conference \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties} and I will present the first results we obtains with the networks in Oslo.
 
 
 
-\bibliographystyle{abbrv}
-\bibliography{../../biblio/bib/SimonCarrignon.bib}                   
+%In every projects I worked I saw how mature such approach is getting. Trying to understand decentralized and unsupervised evolving system \emph{per se} is providing knowledge in a wide range of different area. It is not anymore a marginal object of distraction for curious scientist. With new generation of physicists, biologists, sociologists, economists and even historians who learn such methods, concrete hypotheses are formulated and can be tested. With computer and program always more powerful, and with scientist like me with a strong transdisciplinary background, a high expertise and able to make the link between the questions, the methods and the results, new discovery can be made about topic that were even unthinkable before. 
+%
+%This gives us a wide open area of research where a lot remains to do.  I will continue to explore it. Among other things, I will continue to explore the networks' properties that allow systems to evolve properties such as cooperation, division of labor, specialization\ldots but I want to understand how such networks can evolve. Another huge track of research I want to pursue is to study in what extend the evolution of those properties depend on the abilities of the system to interact with its environment (using developmental mechanism, simple learning, cultural transmission,\ldots). 
+%
+%In any case my main concern is to tighten the link between what I am doing, the empirical data and the scientists working to try to extract meanings from those data. To do so I will continue to work with people from different field but with concrete, real and complex case study. Because I think that the most valuable and beautiful striking knowledge don't lie in computational simulation we can do or in the mathematical model we extract from it, neither in the simple analysis of the raw data and the description of such analysis, but emerge from the well articulation of both side.
+
+
+
+\bibliographystyle{unsrt}
+\bibliography{../../biblio/bib/SimonCarrignon.bib,../../biblio/bib/phd.bib}                   
 \end{document}
