--- a/doc/administrative_doc/CV/cv_scholar2017No.tex
+++ b/doc/administrative_doc/CV/cv_scholar2017No.tex
@@ -12,10 +12,9 @@
 %\setlength{\hintscolumnwidth}{4cm}           % if you want to change the width of the column with the dates
 %\setlength{\maketitlenamewidth}{10cm}        % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
-\usepackage{fontspec}
+\usepackage{libertineotf}
 \usepackage{metalogo}
 \usepackage{hyperref}
-\setmainfont{Linux Libertine}
 % personal data
 \firstname{Simon}
 \familyname{Carrignon}
