--- a/doc/biblio/bib/SimonCarrignon.bib
+++ b/doc/biblio/bib/SimonCarrignon.bib
@@ -70,13 +70,23 @@
 	year = "2016"
 }
 
-@misc{morer2016influenceofthetopologyofculturalnetworksontheequilibriumofanexchangebasedeconomy,
+@inproceedings{morer2016influenceofthetopologyofculturalnetworksontheequilibriumofanexchangebasedeconomy,
 	author = "Morer, Ignacio and Carrignon, Simon and Rubio-Campillo, Xavier",
 	booktitle = "{7th Workshop on Complex Networks (CompleNet 2016) }",
 	location = "Dijon (France)",
 	month = "Avril",
 	title = "{Influence of the topology of cultural networks on the equilibrium of an exchange-based economy}",
 	year = "2016"
+}
+
+@inproceedings{carrignon2017impactofdifferentsociallearningmechanismsontheemergenceofawalrasianequilibrium
+,
+	author = "Carrignon, Simon and Rubio-Campillo, Xavier",
+	booktitle = "{European Human Behavior Evolution Association conference (EHBEA) }",
+	location = "Paris (France)",
+	month = "Avril",
+	title = "{Impact of different social learning mechanisms on the emergence of a Walrasian Equilibrium.}",
+	year = "2017"
 }
 
 @article{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult,
@@ -116,6 +126,145 @@
 	series = "{GECCO '17}",
 	title = "{Benefits of Proportionate Selection in Embodied Evolution: A Case Study with Behavioural Specialization}",
 	url = "http://doi.acm.org/10.1145/3067695.3082551",
+	year = "2017"
+}
+
+@inproceedings{carrignon2018,
+	author = "Carrignon, Simon and Bentley, Alex and Ruck, Damian and Gilchrist, Michael",
+	booktitle = "{2nd Conference of the Cultural Evolution Society}",
+	journal = "Cultural Evolution Society Conference",
+	location = "Tempe, AZ (USA)",
+	month = oct,
+	organization = "Arizona State University",
+	title = "{How the intrinsic value of information can change the spread of news in social media }",
+	year = "2018"
+}
+
+@inproceedings{carrignon2018hpcmodel,
+	author = "Carrignon, Simon",
+	booktitle = "{Conference on Complex System }",
+	location = "Thessaloniki (Greece)",
+	month = "September",
+	title = "{Agent Based Modeling and Bayes Inference to learn about the past: the need for High Performance Computing}",
+	year = "2018"
+}
+
+@inproceedings{carrignon2018abmtrac,
+	author = "Carrignon, Simon and Romanowska, Iza and Brughmans, Tom",
+	booktitle = "{28th Theoretical Roman Archaeology Conference (TRAC)}",
+	location = "Edinburgh (UK)",
+	month = "April",
+	title = "{An Agent-Based Model of Trade in the Roman East (25 BC -- AD 150)}",
+	year = "2018"
+}
+
+@inproceedings{coto2016exploringamphorabetica,
+	author = "Carrignon, Simon and Coto-Sarmiento, Maria",
+	booktitle = "{Culture Conference}",
+	location = "Birmingham (UK)",
+	month = "June",
+	title = "{Exploring the dynamic of changes: An Agent Based Model to understand the amphorae production patterns in the Roman Empire}",
+	year = "2016"
+}
+
+@inproceedings{carrignon2016modelandsimulaion,
+	author = "Carrignon, Simon and Mosca, Alessandro and Rondelli, Bernardo and Remesal, Jose",
+	booktitle = "{Model and Simulation 7}",
+	location = "Barelona (Spain)",
+	month = "May",
+	title = "{Computer modelling and simulation as heuristic tool to understand the past: the case of the EPNEt project.}",
+	year = "2016"
+}
+
+@inproceedings{adams2016lichen,
+	author = "Adams, Julia and Carrignon, Simon and Olle, Aina and Duran, Salva",
+	booktitle = "{Conference on Complex System}",
+	location = "Amsterdam (Netherlands)",
+	month = "September",
+	title = "{Modeling the co-evolutionary dynamics of the Lobaria pulmonaria lichen symbiosis }",
+	year = "2016"
+}
+
+@inproceedings{carrignon2016patternsinglobalization,
+	author = "Dato, Gaetano and Carrignon, Simon and Zhu, Ben and Tarun, Anjali and Strombom, Evelyn and Minxha, Rudi and Ferguson, Brian and Eli, Tucker and Pika, Phillip",
+	booktitle = "{Conference on Complex System}",
+	location = "Amsterdam (Netherlands)",
+	month = "September",
+	title = "{Patterns In Globalization - Viewed through the lens of Trieste }",
+	year = "2016"
+}
+
+@inproceedings{carrignon2016lichen,
+	author = "Carrignon, Simon and Olle, Aina and Duran, Salva and Adams, Julia",
+	booktitle = "{Proceedings of The Complex System Summer School}",
+	location = "Santa Fe, NM (USA)",
+	title = "{Modeling the co-evolutionary dynamics of the Lobaria pulmonaria lichen symbiosis }",
+	year = "2016"
+}
+
+@inproceedings{carrignon2017inovationandeconomy,
+	author = "Carrignon, Simon and Rubio-Campillo, Xavier",
+	booktitle = "{Early-career Social Learning Researchers Winter Worskshop}",
+	location = "Manchester (UK)",
+	month = "Janvier",
+	title = "{Innovation Process and Economic Equilibrium }",
+	year = "2017"
+}
+
+@inproceedings{romanowska2018jerash,
+	author = "Romanowska, Iza and Carrignon, Simon and Brughmans, Tom",
+	booktitle = "{Conference on Complex System }",
+	location = "Thessaloniki (Greece)",
+	month = "September",
+	title = "{When culture meets economy: modelling cultural complexity in an economic setting }",
+	year = "2018"
+}
+
+@article{COTOSARMIENTO2018117,
+	author = "Coto-Sarmiento, Maria and Rubio-Campillo, Xavier and Remesal, Jos{\'e}",
+	doi = "10.1016/j.jas.2018.06.002",
+	issn = "0305-4403",
+	journal = "Journal of Archaeological Science",
+	keywords = "Roman Empire; Amphora workshops; Dressel 20; Social learning; Cultural evolution",
+	pages = "117--123",
+	title = "{Identifying social learning between Roman amphorae workshops through morphometric similarity}",
+	url = "http://www.sciencedirect.com/science/article/pii/S0305440318303005",
+	volume = "96",
+	year = "2018"
+}
+
+@article{Hanson20170367,
+	abstract = "One of the hallmarks of human agglomeration is an increase in the division of labour, but the exact nature of this relationship has been debated among anthropologists, sociologists, economists, and historians and archaeologists. Over the last decade, researchers investigating contemporary urban systems have suggested a novel explanation for the links between the numbers of inhabitants in settlements and many of their most important characteristics, which is grounded in a view of settlements as social networks embedded in built environments. One of the remarkable aspects of this approach is that it is not based on the specific conditions of the modern world (such as capitalism or industrialization), which raises the issue of whether the relationships observed in contemporary urban systems can also be detected in pre-modern urban or even non-urban systems. Here, we present a general model for the relationship between the population and functional diversity of settlements, where the latter is viewed as an indicator of the division of labour. We then explore the applicability of this model to pre-modern contexts, focusing on cities in the Roman Empire, using estimates of their numbers of inhabitants, numbers of documented professional associations, and numbers of recorded inscriptions to develop an index of functional diversity. Our results are consistent with theoretical expectations, adding further support to the view that urban systems in both contemporary and pre-modern contexts reflect a common set of generative processes.",
+	author = "Hanson, J. W. and Ortman, S. G. and Lobo, J.",
+	doi = "10.1098/rsif.2017.0367",
+	eprint = "http://rsif.royalsocietypublishing.org/content/14/136/20170367.full.pdf",
+	issn = "1742-5689",
+	journal = "Journal of The Royal Society Interface",
+	number = "136",
+	publisher = "The Royal Society",
+	title = "{Urbanism and the division of labour in the Roman Empire}",
+	url = "http://rsif.royalsocietypublishing.org/content/14/136/20170367",
+	volume = "14",
+	year = "2017"
+}
+
+@article{weldon1893certaincorrelatedvariationsincrangonvulgaris,
+	author = "{Weldon}, W.~F.~R.",
+	journal = "Royal Society of London Proceedings Series I",
+	localfile = "/home/simon/Documents/biblio/pdfs/weldon1893certaincorrelatedvariationsincrangonvulgaris.pdf",
+	pages = "1--21",
+	title = "{Certain Correlated Variations in Crangon vulgaris}",
+	volume = 51,
+	year = 1892
+}
+
+@book{collectif2017science,
+	author = "Collectif, Caf{\'e} des Sciences",
+	isbn = "9782410003031",
+	publisher = "Humensis",
+	series = "{Science {\`a} plumes}",
+	title = "{La science {\`a} contrepied}",
+	url = "https://books.google.es/books?id=YVImDwAAQBAJ",
 	year = "2017"
 }
 
