--- a/doc/administrative_doc/2018SFpostdoc/statementSFI.tex
+++ b/doc/administrative_doc/2018SFpostdoc/statementSFI.tex
@@ -11,40 +11,44 @@
 \setmainfont{ebgaramond}
 
 
-\usepackage[scale=0.75,tmargin=.2cm]{geometry}
+\usepackage[scale=0.75,bmargin=.2cm,tmargin=.2cm]{geometry}
 
-\author{Simon Carrignon, October 2018}
-\title{Statement of Interest in SFI}
+\definecolor{grey}{gray}{0.6}
+\title{\textcolor{grey}{\Large Statement of Interest in SFI}\\
+\vspace{-.25cm}
+{ \normalsize Simon Carrignon (October 2018)}}
+\author{}
 \date{}
 
 
 
-\definecolor{grey}{gray}{0.6}
 
 %\color{grey}
 \begin{document}
 \maketitle
 
-\textcolor{grey}{Input from other fields:}  Thanks to my formation and practice, I can now reproduce a various range of social and natural  phenomena by model them as algorithmic instructions, simulate those model and explore the results of those simulation to learn more about the original system modeled.  
-Algorithmic descriptions and computer simulations have great advantages: they allow to finely describe all elements of the system, at various scale, and integrate any kind of knowledge about the real system. Nonetheless, extracting valuable information from those finely tuned models can get quickly tricky. When more parameters, theories and knowledge is integrated to the model, the \emph{curse of dimensionality} makes it hard to control all details.  Good empirical data and precisely defined research questions can help avoid those pitfalls and limit the scope of enquiry, but I also learnt by experience that working with someone with strong theoretical, mathematical and statistical background helps a lot. It allows to avoid loosing time exploring useless part of the model that simple theories can predict, and it greatly increase the quality and the robustness of the analysis. The Santa Fe Institute provide the best environment to work side by side with this kind of people and by doing so increase my own  skills with this regard.
+\vspace{-1cm}
 
-\vspace{.3cm}
+\textcolor{grey}{Input from other fields:}  Given my formation and experience, I can reproduce a various range of social and natural phenomena by modeling them as set of algorithmic instructions. I can simulate them, explore the results and learn more about the original system modeled.  
+Those techniques have great advantages: one can finely describe all elements of the system at various scale, integrate any kind of knowledge about the real system, etc. Nonetheless, extracting valuable information can get tricky. When more parameters, theories and knowledge are integrated, the \emph{curse of dimensionality} makes hard to follow all underlying relationships. High Performance Computing, good empirical data, good knowledge of studied system and precisely defined research questions helps, but working with people with strong theoretical, mathematical and statistical background is priceless. It allows to avoid loosing time exploring useless or easily predictable part of the model and increase the quality and the robustness of the analysis. This is even more true when the person knows well how to apply and reframe his knowledge to heterogeneous and unrelated systems. SFI provides a unique environment to work side by side with the world best researchers with this mindset. This will allow me to build the perfect network of colleagues and increase my own skills.
 
-\textcolor{grey}{Workshop:} One workshop I always wanted to organize would be on the epistemological and historical foundation of evolutionary theories. Moreover, how most of the problem faced when trying to use those theories to understand social system are not so different than the problem faced by Darwin himself and evolutionary biology in general.  I would love to discuss how different model practice (computer model in particular but also statistical model, \emph{cf} Weldon and Pearson) and different vision of science and theories have helped facing those problem and could better account for evolutionary theories and their application at different levels. 
+\vspace{.5cm}
 
-\vspace{.3cm}
+\textcolor{grey}{Workshop:} One workshop I always wanted to organize is one about the epistemological and historical foundation of evolutionary theories. It will highlight how most of the problems faced when using evolutionary theories to understand social systems are related to problems faced by Darwin himself and evolutionary biology since its very beginning. It should also illustrates how different modelling practices (statistical model historically --\emph{cf} Weldon and Pearson\cite{weldon1893certaincorrelatedvariationsincrangonvulgaris}-- more recently Bayesian Inference and computer models) and alternative visions of Science, have helped and still help to solve those problems.
 
-\textcolor{grey}{Open and inclusive Science:} As member of the Scientific Community, I feel as a duty that my work have to be available to all. This is why, following principle inherited from the Free Software movement in computer science, I make my work as open as possible. I realise my code under open source licences and my presentations under Creative Commons and similar licence, as well as the data generated by my models. I am deeply convinced that Science would greatly gain by following a path of more open and shareable science. Transparency and shared are central requirement for the development of a robust knowledge, accessible to all and on which future generation can build. 
+\vspace{.5cm}
 
-Another way to make the knowledge produced by science more accessible is to teach and popularize it. To do so I was at the initiative of an association with colleagues of mine in Paris, where we organized workshops for young children to teach them the basic principle of programming in a engaging way, using robots. This ultimately led to a paper in the proceeding of one of the main conference of the field: \cite{gaudiello2010representations}.
+%\textcolor{grey}{Traditional Academic Environment?} Though my main technical background and skills is about programming and the use of computers to model things, I wont fit in a laboratory of Computer Science. I am not able to write code that will improve the speed of a given compression algorithm or that will parallilized in the biggest supercomputer of the world. Neither my knowledg eof congitive science or evolutionary biology will make me a great evolutionary biologist or Cogntitives sceintist. The models I write as well as the hypothesis I test \emph{are} simple. Taken separately they will hardly interest traditional computer scientist or biologist nor historian.  only interesting when taking together. 
 
-I also co-animate a podcast on Artificial Life with my colleague and friend David Medernach: \href{http://vie-artificielle.com/}{vie-artificielle.com} (in french). We ended up participating to a collective book on Science: ``La Science \`a  contrepied'' (cf~\href{https://www.belin-editeur.com/la-science-contrepied}{here}) were we wrote a short introduction to Artificial Life and published a Youtube video with the text, available here:~\href{https://www.youtube.com/watch?v=HBhrmlXNqM4}{youtu.be/HBhrmlXNqM4}. 
+%\vspace{.5cm}
 
-All those activities allows to broader the audience of Science. Assuring that scientific knowledge and methods remain accessible and understandable to the most people is a crucial if we want the scientific community to become more inclusive and diverse. The risk is high for science to stay stuck in a closed ring where only a limited amount of people have the adequate background to be able to decipher academia, its codes, language and objectives.
+\textcolor{grey}{Open and inclusive Science:} As member of the Scientific Community, I feel as a duty that my work have to be available to all. That's why, following principle inherited from the Free Software movement in computer science, I make my work as open as possible. My code is written under open source licences and my presentations as well as the data generated by my models, are Creative Commons. I am deeply convinced Science as to be as open and shareable as possible. Those  are central requirements for the development of a knowledge robust, reproducible, and accessible to all, on which future generations can build. 
+Another way to make the knowledge produced by science more accessible is to teach and popularize it. This is why I was we created an association in Paris, ``l'Academie du Robot'', where we organized workshops for young children to teach them basic principles of programming using robots. This ultimately led us to publish a paper on how Robots can be use to teach and learn: \cite{gaudiello2010representations}. In the same direction I co-animated a podcast on Artificial Life with my colleague and friend David Medernach: \href{http://vie-artificielle.com/}{vie-artificielle.com} (in french). We ended up writing in a collective book on Science: ``La Science \`a  contrepied''\cite{collectif2017science} where we wrote a short introduction to Artificial Life coupled with a Youtube Video available here:~\href{https://www.youtube.com/watch?v=HBhrmlXNqM4}{youtu.be/HBhrmlXNqM4}. 
+All this aims to broader the audience of Science. Assuring that scientific knowledge and methods remain accessible and understandable to everyone is crucial if we want the scientific community to become more inclusive and diverse. The risk is high to stay stuck in a closed ring where only limited amount of people have the adequate background to enter academia, by deciphering its underlying codes, language and objectives.
 
 
+%\vspace{-.5cm}
 
-
-\bibliographystyle{abbrv}
+\bibliographystyle{unsrt}
 \bibliography{../../biblio/bib/SimonCarrignon.bib}                   
 \end{document}
