add grant and fundings

--- a/doc/administrative_doc/CV/cv_scholar2018.tex
+++ b/doc/administrative_doc/CV/cv_scholar2018.tex
@@ -116,11 +116,15 @@ Intensive 4 weeks series of lectures, labs, and discussion sessions focusing on 
 \vspace{.2cm}
 \subsection{Organisation and Edition}
 \cventry{Assistant Editor}{Since November 2017}{Special Issue: Evolution of Cultural Complexity}{Adaptive Behavior}{}{Assistant Editor of a special issue to be published in the journal of Adaptive Behavior, on the theme `` Evolution of Cultural Complexity''. Excepted publication date: September 2019. }
-\cventry{Website: http://ccs18.bsc.es}{September 2018}{Evolution of Cultural Complexity III }{Thessaloniki, Greece }{}{Organisation and chair of a one day satellite at the 2018 Conference on Complex System on ``Evolution of Cultural Complexity''. Invited speakers: Peter Turchin \& Anne Kandler }
-\cventry{Website: http://ccs17.bsc.es}{September 2017}{Evolution of Cultural Complexity II}{Cancun, Mexico }{}{Organisation and chair of a one day satellite at the 2017 Conference on Complex System on ``Evolution of Cultural Complexity''. Invited speakers: Sergi Valverde, Tom Froese \& Alex Bentley }
-\cventry{Website: http://laremi.net}{Avril 2013}{Darwin as a Conductor}{Lyon, France}{}{Organisation and chair of a 3-days conference on the use of Darwinian theories to understand changes in music. Invited speakers:~Olivier Moring, Mathieu Charbonneau \& Steven Jan}
-3-days 
+\cventry{Website: https://ccs18.bsc.es}{September 2018}{Evolution of Cultural Complexity III }{Thessaloniki, Greece }{}{Organisation and chair the satellite ``Evolution of Cultural Complexity'' at the 2018 Conference on Complex System. Invited speakers: Peter Turchin \& Anne Kandler }
+\cventry{Website: https://ccs17.bsc.es}{September 2017}{Evolution of Cultural Complexity II}{Cancun, Mexico }{}{Organisation and chair of the satellite ``Evolution of Cultural Complexity'' at the 2017 Conference on Complex System. Invited speakers: Sergi Valverde, Tom Froese \& Alex Bentley }
+\cventry{Website: http://laremi.net}{Avril 2013}{Darwin as a Conductor}{Lyon, France}{}{Organisation and chair of a 3-days conference on the use of Darwinian theories to understand changes in music. Invited speakers:~Olivier Morin, Mathieu Charbonneau \& Steven Jan}
 
+\section{Grant \& Fundings}
+\cvitemwithcomment{Severo Ochoa Mobility Grant (2018)}{Accommodation \& travel for 1-month visiting research}{2\,000€}
+\cvitemwithcomment{NECSI Winter School Scholarship (2018)}{Inscription fees for NECSI winter school}{\$1\,300}
+\cvitemwithcomment{DACAS Early Career Bursary (2016)}{Accommodation \& travel for DACAS Workshop}{£350}
+\cvitemwithcomment{ENS Lyon - Junior Lab (2011-2013)}{Funding for meetings, experiments and conferences}{3\,000€}
 
 \section{Languages}
 \cvitemwithcomment{French}{Mother Tongue}{}
