--- a/doc/administrative_doc/CV/research_project.tex
+++ b/doc/administrative_doc/CV/research_project.tex
@@ -51,7 +51,7 @@ That's why I started to use Bayesian Inference. More precisely: Approximate Baye
 
 Using that method, and thanks to highly qualified Archaeologists, Historians and powerful supercomputing architecture,  I was finally able to loop through the full circle of knowledge production, in a way that looked much similar to what traditional experimental science is doing. From the proposal and formulation of hypotheses, to the preparation of an experimental setup to test those hypotheses, to the comparison and rejection of those hypotheses with regard to known evidences. Most of the recent work I did, and my full PhD, go in that direction. Most is still to be published but have been subject of various talks and posters \cite{coto2016exploringamphorabetica,carrignon2018abmtrac,romanowska2018jerash,carrignon2017impactofdifferentsociallearningmechanismsontheemergenceofawalrasianequilibrium,carrignon2018hpcmodel,carrignon2018}. 
 
-I have now a fully functional research framework based on computer models as tools to explore various range of phenomena that cannot be tested through experimental or analytical exploration. It relies on evolutionary theories as a general reference within which implement and interpret those models, and Bayesian Inference to statistically test, compare and select them given known datasets and evidences.
+I have now a good experience on using computer models to explore various range of phenomena that cannot be tested through experimental or analytical exploration. I rely on evolutionary theories as a general framework within which implement and interpret those models, and Bayesian Inference to statistically test, compare and select them given known datasets and evidences.
 
 If evolutionary biology is already successfully using this framework, much more has to be done in Humanities and Social Sciences. The potential of applications is huge and I think the Institute for Advance Study in Toulouse would be the perfect place to do so. I have various ongoing project that I started during my PhD that I want to follow during the coming years.
 
